<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/main_title_bar"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/receive_gift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gift_text_red"
                android:gravity="center"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:text="@string/my_accepted"
                android:textColor="@color/black2"
                android:textSize="15.0dip"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/send_gift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:text="@string/my_send"
                android:textColor="@color/black2"
                android:textSize="15.0dip"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exchange_gift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:text="@string/redeem_coin"
                android:textColor="@color/black2"
                android:textSize="15.0dip"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@drawable/list_lines"/>

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8.0dip"/>
</LinearLayout>